# TogetherScout

./: .dockerignore  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  test_stream.txt
backend/: Dockerfile  main.py  pyproject.toml
backend/accelerator_autopsy/: agent.py  router.py  startupindia.py  topstartups.py
backend/audit/: router.py  setup_db.py
backend/founder_evaluator/: agent.py  founder_agent.py  router.py  tools.py
backend/shared/: data.py  db.py  dynamic_llm_client.py  models.py  nvidia_llm_client.py  smatbot_llm_client.py  utils.py
backend/smatbot/: __init__.py  session_harvester.py
backend/together_radar/: __init__.py  agent.py  connectors.py  router.py
backend/video/: router.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/videos/: togetherscout_launch_vid.mov
frontend/src/: App.jsx  index.css
frontend/src/components/: BuyMeCoffee.jsx  ServerWakingScreen.jsx  SettingsModal.jsx  TogetherRadar.jsx
frontend/src/pages/: Companies.jsx  FounderProfile.jsx  Founders.jsx  Landing.jsx
frontend/src/utils/: api.js  fingerprint.js
