[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "firecrawl-py>=4.31.0",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.50.2",
]
